// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package hotels;

option go_package = "github.com/badu/microservices-demo/app/hotels;hotels";

message Hotel {
  google.protobuf.Timestamp     CreatedAt       = 14;
  google.protobuf.Timestamp     UpdatedAt       = 15;
  string                        HotelID         = 1;
  string                        Name            = 2;
  string                        Email           = 3;
  string                        Country         = 4;
  string                        City            = 5;
  string                        Description     = 6;
  string                        Location        = 7;
  string                        Image           = 9;
  repeated string               Photos          = 10;
  int64                         CommentsCount   = 11;
  double                        Rating          = 8;
  double                        Latitude        = 12;
  double                        Longitude       = 13;
}

message GetByIDRequest {
  string                        HotelID         = 1;
}

message GetByIDResponse {
  Hotel                         Hotel           = 1;
}

message GetHotelsRequest {
  int64                         page            = 1;
  int64                         size            = 2;
}

message GetHotelsResponse {
  int64                         TotalCount      = 1;
  int64                         TotalPages      = 2;
  int64                         Page            = 3;
  int64                         Size            = 4;
  bool                          HasMore         = 5;
  repeated Hotel                Hotels          = 6;
}

message CreateHotelRequest {
  string                        Name            = 1;
  string                        Email           = 2;
  string                        Country         = 3;
  string                        City            = 4;
  string                        Description     = 5;
  string                        Location        = 6;
  string                        Image           = 8;
  repeated string               Photos          = 9;
  int64                         CommentsCount   = 10;
  double                        Rating          = 7;
  double                        Latitude        = 11;
  double                        Longitude       = 12;
}

message CreateHotelResponse {
  Hotel                         Hotel           = 1;
}

message UpdateHotelRequest {
  string                        HotelID         = 1;
  string                        Name            = 2;
  string                        Email           = 3;
  string                        Country         = 4;
  string                        City            = 5;
  string                        Description     = 6;
  string                        Location        = 7;
  string                        Image           = 9;
  repeated string               Photos          = 10;
  int64                         CommentsCount   = 11;
  double                        Rating          = 8;
  double                        Latitude        = 12;
  double                        Longitude       = 13;
}

message UpdateHotelResponse {
  Hotel                         Hotel           = 1;
}

message UploadImageRequest {
  string                        HotelID         = 1;
  string                        ContentType     = 3;
  bytes                         Data            = 2;
}

message UploadImageResponse {
  string                        HotelID         = 1;
}

service HotelsService {
  rpc CreateHotel(CreateHotelRequest) returns (CreateHotelResponse) {}
  rpc UpdateHotel(UpdateHotelRequest) returns (UpdateHotelResponse) {}
  rpc GetHotelByID(GetByIDRequest)    returns (GetByIDResponse) {}
  rpc GetHotels(GetHotelsRequest)     returns (GetHotelsResponse) {}
  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse) {}
}
